--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,32 +1,25 @@
-.product-form{
-            width: 20rem;
-            max-width:90%;
-            margin: auto;
-        }
+.product-form {
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
+}
 
+.product-item {
+    width: 20rem;
+    max-width: 95%;
+}
 
-        .form-control{
-            margin: 1rem 0;
-        }
-        .form-control label,
-        .form-control input{
-            display: block;
-            width: 100%;
-        }
-        .form-control input{
-            border: 1px solid #dbc441;
-            font: inherit;
-            border-radius: 2px;
-        }
-        button{
-            font:inherit;
-            border:1px solid #6200ff;
-            color: #6200ff;
-            background:white;
-            border-radius: 3p x;
-            cursor: pointer  ;
-        }
-        button:hover,
-        button:active{
-            background:#6200ff;
-            color:white;
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
+}
